@@ -402,6 +402,7 @@ upgrade.error.notrequired=Non se necesita actualizar a versi\u00F3n.
 upgrade.error.oldversion=Non se pode actualizar \u00E1 versi\u00F3n {0} desde versi\u00F3ns anteriores \u00E1 {1}.
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=Descrici\u00F3n do ficheiro
+upload.caption.source=Ficheiro fonte
 upload.error.directorycreate=Incapaz de crear directorio {0} para subidas.
 upload.error.filename=Nome de ficheiro non v\u00E1lido.
 upload.error.filenotfound=Non se atopou o ficheiro subido.
