@@ -356,6 +356,7 @@ upgrade.error.notrequired=Trenutno nije potrebna niti jedna nadogradnja.
 upgrade.error.oldversion=Nadogradnja na verzuiju {0} s verzija starijih od {1} nije podr\u017Eana.
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=Opis datoteke
+upload.caption.source=Direktorij s izvornim kodom
 upload.error.directorycreate=Direktorij {0} za upload nije mogu\u0107e stvoriti.
 upload.error.filename=Neispravno ime datoteke.
 upload.error.filenotfound=U direktoriju za upload nema niti jedne datoteke.
