@@ -356,6 +356,7 @@ upgrade.error.notrequired=Er is op dit moment geen upgrade noodzakelijk.
 upgrade.error.oldversion=Upgrading naar versie {0} van versies ouder dan {1} worden niet ondersteunt.
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=Bestandsbeschrijving
+upload.caption.source=Bronbestand
 upload.error.directorycreate=Niet in staat om de upload folder {0} te cre\u00EBren.
 upload.error.filename=Ongeldige bestandsnaam..
 upload.error.filenotfound=Geen bestand gevonden in uploads.
