@@ -402,6 +402,7 @@ upgrade.error.notrequired=Nenhuma atualiza\u00E7\u00E3o necess\u00E1ria.
 upgrade.error.oldversion=Atualizando para a vers\u00E3o {0} a partir de vers\u00F5es mais antigas que {1} n\u00E3o s\u00E3o suportadas.
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=Descri\u00E7\u00E3o do Arquivo
+upload.caption.source=Fonte
 upload.error.directorycreate=N\u00E3o foi poss\u00EDvel criar o diret\u00F3rio de upload {0}.
 upload.error.filename=Nome de arquivo inv\u00E1lido.
 upload.error.filenotfound=Nenhum upload encontrado.
