@@ -378,6 +378,7 @@ upgrade.error.notrequired=\u017Diadna aktualiz\u00E1cia nie je moment\u00E1lne p
 upgrade.error.oldversion=Aktualiz\u00E1cia na verziu {0} z verzie star\u0161ej ako {1} nie je podporovan\u00E1.
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=Popis s\u00FAboru
+upload.caption.source=Zdrojov\u00FD s\u00FAbor
 upload.error.directorycreate=Nepodarilo sa vytvori\u0165 upload prie\u010Dinok {0}.
 upload.error.filename=Neplatn\u00E9 meno s\u00FAboru.
 upload.error.filenotfound=\u017Diaden s\u00FAbor sa nena\u0161iel.
