@@ -378,6 +378,7 @@ upgrade.error.notrequired=No upgrade is currently required.
 upgrade.error.oldversion=Upgrading to version {0} from versions older than {1} is not supported.
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=Filbeskrivning
+upload.caption.source=Source File
 upload.error.directorycreate=Unable to create upload directory {0}.
 upload.error.filename=Ogiltigt filnamn.
 upload.error.filenotfound=No file found in upload.
